<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">PietDroid</string>

    <string name="button_text_ok">OK</string>
    <string name="button_text_cancel">Cancel</string>
    <string name="title_error">Error</string>

    <!-- CONTROL -->
    <string name="content_description_toolbox_button_run">Run button</string>
    <string name="content_description_toolbox_button_step">Step button</string>
    <string name="content_description_toolbox_button_pause">Pause button</string>
    <string name="content_description_toolbox_button_stop">Stop button</string>
    <string name="content_description_button_scroll_toggle">Toggle scroll button</string>
    <string name="content_description_button_zoom_decrease">Zoom decrease</string>
    <string name="content_description_button_zoom_increase">Zoom increase</string>
    <string name="content_description_ic_launcher_action_bar">Application icon</string>
    
    <!-- ACTIONS -->
    <string name="action_bitmap">Bitmap</string>
    <string name="action_new">New</string>
    <string name="action_save">Save</string>
    <string name="action_save_as">Save As&#8230;</string>
    <string name="action_load">Load</string>
    <string name="action_clear">Clear</string>
    <string name="action_quit">Quit</string>
    <string name="action_clear_log">Clear Log</string>
    <string name="action_settings">Settings</string>
    <string name="action_hide_tabhost">Hide info widget</string>
    <string name="action_show_tabhost">Show info widget</string>
    <string name="action_show_help">Help</string>
    <!-- PREFERENCES -->
    <string name="delay_before_step_title">Step delay</string>
    <string name="delay_before_step_summary">Delay in ms between each step of interpretation</string>
    <string name="delay_before_step_dialog_title">Step delay</string>
    
    <string name="unknow_color_interpretation_summary">Non piet colors value</string>
    <string name="unknow_color_interpretation_title">Color that will replace non piet colors</string>
    
    <string name="new_field_color_title">Default color</string>
    <string name="new_field_color_summary">Color that will fill empty bitmap</string>
    
    <string name="image_write_format_summary">Supported image output formats</string>
    <string name="image_write_format_title">Save image formats</string>
    
    <string name="cell_padding_title">Codel padding</string>
    <string name="cell_padding_summary">Padding between codels in bitmap</string>
    
    <string name="cell_size_title">Codel size</string>
    <string name="cell_size_summary">Side size of each codel in bitmap</string>
    
    <string name="preferences_header_summary">Piet Droid preferences</string>
    <string name="preferences_header_title">Piet Droid preferences</string>
    
    <string name="gui_trace_mode_summary">Graphical program step trace mode</string>
    <string name="gui_trace_mode_title">Trace mode</string>
    
    <string name="edittext_new_file_width_hint">Width</string>
    <string name="edittext_new_file_height_hint">Height</string>

    <string name="logging_enable_summary">Log each Piet command</string>
    <string name="logging_enable_title">Enable logging</string>
    
    <string name="prefs_zoom_step">Zoom increase/decrease step</string>
    <string name="prefs_zoom_step_title">Zoom step</string>
    <string name="prefs_zoom_step_summary">Step for each zoom action</string>
    
    <!-- TABHOST -->
    <string name="tab_in">Input</string>
    <string name="tab_out">Output</string>
    <string name="tab_state">State</string>
    <string name="tab_log">Log</string>
    <string name="out_buffer_title">Program output</string>
    <string name="in_buffer_hint">Write space separated values here.</string>
    <string name="state_info_title">Program state</string>

    <!-- DIALOGS -->
    <string name="dialog_title_save_changes">All changes will be lost. Are you sure?</string>
    <string name="dialog_title_file_settings">Bitmap dimensions.</string>
    <string name="load_bitmap_process_dialog_title">Loading image file</string>
    <string name="load_bitmap_process_dialog_message">Please wait&#8230;</string>
    <string name="save_bitmap_process_dialog_title">Saving bitmap</string>
    <string name="save_bitmap_process_dialog_message">Please wait&#8230;</string>
    <string name="dialog_save_file_label_new_file">Enter the name of the file (*.png)</string>
    
     <!-- RUNTIME -->
    <string name="runtime_internal_error">Internal error! Execution stopped</string>
    <string name="runtime_load_bitmap_error">Error loading image!</string>
    <string name="runtime_save_bitmap_error">Error writing image!</string>
    <string name="runtime_bitmap_saved">Bitmap saved!</string>
    <string name="runtime_edit_mode_lock_warning">Edit mode disabled until program executed.</string>
    <string name="runtime_large_bitmap_error"> Error! Image is too large to create piet program.</string>
    <string name="runtime_error_title">Error!</string>
    <string name="runtime_decoding_error">Decoding error!</string>
    
    <string name="abort_application_image_initialise_error">Can`t initialize piet image</string>
    <string name="abort_application_not_mounted">External Storage (SDCard) not mounted  %s</string>
    <string name="abort_application_cant_create_dir">Can`t create application directory %s</string>
    <string name="abort_application_is_not_dir">Application folder is not directory %s</string>
    <string name="abort_application_is_not_writable">Application folder is not writable %s</string>
    <string name="abort_application_fatal_error">Fatal application error!</string>
    <string name="crash_toast_text">Unfortunately application crashed, but a report has been sent to  developer to help fix the issue !</string>
    
    
     <!-- WARNING -->
     <string name="warning_parsing_zoom_step">Error parsing zoom step</string>
     <string name="warning_parsing_step_delay">Error parsing step delay</string>
     <string name="warning_parsing_cell_padding">Error parsing cell padding</string>
</resources>