<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

     <ImageButton
        android:id="@+id/button_run"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:paddingLeft="@dimen/control_toolbox_padding"
        
        android:background="@null"
        android:src="@drawable/toolbox_button_run"
        android:contentDescription="@string/content_description_toolbox_button_run" />

    <ImageButton
        android:id="@+id/button_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/medium_horizontal_margin"
        android:layout_weight="1"
         
        android:background="@null"
        android:src="@drawable/toolbox_button_step"
        android:contentDescription="@string/content_description_toolbox_button_step"  />

    <ImageButton
        android:id="@+id/button_pause"
      
        android:layout_marginLeft="@dimen/medium_horizontal_margin"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/toolbox_button_pause"
        android:contentDescription="@string/content_description_toolbox_button_pause"  />

    <ImageButton
        android:id="@+id/button_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/medium_horizontal_margin"
        android:layout_weight="1"
        
        android:background="@null"
        android:src="@drawable/toolbox_button_stop"
        android:contentDescription="@string/content_description_toolbox_button_stop"  />
</LinearLayout>